# birdie

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Shuttle.toml  flow.org  math.org  schema.sql
js/: README.md  package-lock.json  package.json  preact.config.js  tsconfig.json
js/src/: context.ts  index.ts  manifest.json  template.html  utils.ts
js/src/components/: app.tsx  common.tsx  outingHeader.tsx
js/src/models/: expense.ts  outing.ts  person.ts
js/src/routes/: home.tsx  notfound.tsx
js/src/routes/outings/: details.tsx  join.tsx  list.tsx  results.tsx
js/src/style/: index.css
src/: index.html  lib.rs  main.rs  models.rs  s3.rs
tests/: routes.rs
