[package]
name = "birdie"
version = "0.1.0"
edition = "2021"
description = "Split group expenses using the minimal number of transactions"
license = "GPL-3.0-or-later"
repository = "https://github.com/jming422/birdie.git"
exclude = [".*", "/js/"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
aws-config = "0.12.0"
aws-sdk-s3 = "0.12.0"
axum = "0.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = "1.0"
shuttle-service = { version = "0.3", features = ["secrets", "sqlx-postgres", "web-axum"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono"] }
sync_wrapper = "0.1"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tar = "0.3"
tokio-util = "0.7"
tower-http = { version = "0.3", features = ["fs"] }
