[package]
name = "birdie"
version = "0.1.2"
edition = "2021"
description = "Split group expenses using the minimal number of transactions"
license = "GPL-3.0-or-later"
repository = "https://github.com/jming422/birdie.git"
exclude = ["/js", "/screenshots"]

[lib]

[dependencies]
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
aws-config = "0.46"
aws-sdk-s3 = "0.16"
axum = "0.5"
chrono = { version = "0.4", features = ["serde"] }
harsh = "0.2"
lazy_static = "1"
rust_decimal = { version = "1", features = ["serde-with-float", "serde-with-arbitrary-precision"] }
serde = "1"
serde_json = "1"
shuttle-service = { version = "0.5.0", features = ["secrets", "sqlx-postgres", "web-axum"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "decimal", "chrono"] }
sync_wrapper = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tar = "0.3"
tokio-util = "0.7"
tower-http = { version = "0.3", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = "0.14"
mime = "0.3"
tower = { version = "0.4", features = ["util"] }
