[package]
name = "birdie"
version = "0.1.6"
edition = "2021"
description = "Split group expenses using the minimal number of transactions"
license = "GPL-3.0-or-later"
repository = "https://github.com/jming422/birdie.git"

[dependencies]
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
aws-config = "1"
aws-sdk-s3 = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
harsh = "0.2"
lazy_static = "1"
rust_decimal = { version = "1", features = ["serde-with-float", "serde-with-arbitrary-precision"] }
serde = "1"
serde_json = "1"
shuttle-axum = { version = "0.34", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.34"
shuttle-secrets = "0.34"
shuttle-shared-db = { version = "0.34", features = ["postgres"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "rust_decimal", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-tar = "0.3"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
mime = "0.3"
tower = { version = "0.4", features = ["util"] }
